[tool.poetry]
name = "lumis"
version = "0.1.0"
description = ""
authors = ["Tarek Sanger <tarek.sanger@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
openai = "^1.23.6"
wikipedia = "^1.4.0"
neo4j = "^5.20.0"
pydantic-settings = "^2.5.2"
spacy = "==3.7.5"
asgiref = "^3.8.1"
tenacity = "^9.0.0"
langchain-core = "^0.3.12"
spacy-experimental = "^0.6.4"
nltk = "^3.9.1"
thinc = {version = ">=8.2.2,<8.3.0", extras = ["torch"]}


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
ipython-ngql = "^0.12.0"
ruff = "^0.5.3"
mccabe = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pylint."messages control"]
disable = "all"
enable = [
  "empty-docstring",
  "missing-function-docstring",
]
ignore = ["setup.py", "__init__.py"]
ignore-paths = ["tests", "migrations"]