[project]
name = "lumis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref>=3.8.1",
    "coreferee",
    "coreferee-model-en>=1.0.0",
    "en-core-web-lg",
    "en-core-web-trf",
    "huggingface-hub==0.24.7",
    "langchain>=0.3.4",
    "langchain-core>=0.3.13",
    "neo4j>=5.25.0",
    "numpy==1.26.4",
    "openai>=1.52.2",
    "pydantic>=2.9.2",
    "sentence-transformers>=2.2.2",
    "spacy-llm>=0.7.2",
    "spacy==3.7.1",
    "tenacity>=9.0.0",
    "torch>=2.5.0",
    "transformers>=3.4.0,<4.29.0",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython-ngql>=0.14.3",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.3",
    "mccabe>=0.7.0",
    "pydantic-settings>=2.6.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch", marker = "sys_platform != 'darwin'" },
]
coreferee = { workspace = true }
en-core-web-trf = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.1/en_core_web_trf-3.7.1-py3-none-any.whl" }
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.0/en_core_web_lg-3.7.0-py3-none-any.whl" }
coreferee-model-en = { path = "packages/coreferee/models/en" }


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["packages/*"]

[tool.hatch.build]
dev-mode-dirs = ["."]

[tool.pylint."messages control"]
disable = "all"
enable = [
  "empty-docstring",
  "missing-function-docstring",
]
ignore = ["setup.py", "__init__.py"]
ignore-paths = ["tests", "migrations"]
